syntax = "proto3";

package Common.Proto.Npc;

// Npc对话信息
message DialogueInfo{
	int32 npc_id = 1;
	int32 dialogue_id = 2;
}
